--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,104 @@
-h1 {
-    color: red;
+body {
+    
+}
+
+body > header {
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    width: 20%;
+    height: 100%;
+
+    text-align: center;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    background-color: #3c3744;
+
+    color: #fbfff1;
+}
+
+#logoName {
+    font-size: 1.5rem;
+    pointer-events: none;
+}
+
+header > a {
+    color: #fbfff1;
+    text-decoration: none;
+    transition: color .2s linear;
+}
+
+header > a:hover {
+    color: #9bc1bc;
+}
+
+#logo {
+    border: .3rem solid #fbfff1;
+    color: #fbfff1;
+    width: 4rem;
+    border-radius: 50%;
+    font-size: 3rem;
+    margin-top: 2rem;
+    text-align: center;
+    pointer-events: none;
+}
+
+#navigator {
+    border-top: .3rem solid #fbfff1;
+    width: 100%;
+    padding-top: 2rem;
+    margin-top: 3rem;
+    list-style-type: none;
+}
+
+#navigator > li > a {
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: #fbfff1;
+    transition: color .2s linear;
+}
+
+#navigator > li > a:hover {
+    color: #9bc1bc;
+}
+
+#mainPage {
+    position: absolute;
+    top: 0;
+    left: 20%;
+
+    width: 78%;
+    height: 100%;
+
+    padding-left: 2%;
+    background-color: #fbfff1;
+}
+
+#mainTitle {
+    text-align: center;
+    font-size: 2rem;
+    color: #3c3744;
+}
+
+#allProjectsContainer {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: flex-start;
+}
+
+.projectContainer {
+    width: 30%;
+    margin: 1%;
+
+    background-color: #3c3744;
+    color: #fbfff1;
+
+    border-radius: 1%;
 }
