--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,23 +7,23 @@ body {
 }
 
 @-webkit-keyframes slide-down {
-    0% { opacity: 0; -webkit-transform: translateY(-100%); }   
-  100% { opacity: 1; -webkit-transform: translateY(0); }
+    0% { opacity: 0; -webkit-transform: translate(-50%, -100%); }   
+  100% { opacity: 1; -webkit-transform: translate(-50%, 0); }
 }
 
 @-moz-keyframes slide-down {
-    0% { opacity: 0; -moz-transform: translateY(-100%); }   
-  100% { opacity: 1; -moz-transform: translateY(0); }
+    0% { opacity: 0; -moz-transform: translate(-50%, -100%); }   
+  100% { opacity: 1; -moz-transform: translate(-50%, 0); }
 }
 
 @-webkit-keyframes slide-up {
-    0% { opacity: 1; -webkit-transform: translateY(0); }   
-  100% { opacity: 0; -webkit-transform: translateY(-100%); }
+    0% { opacity: 1; -webkit-transform: translate(-50%, 0); }   
+  100% { opacity: 0; -webkit-transform: translate(-50%, -100%); }
 }
 
 @-moz-keyframes slide-up {
-    0% { opacity: 1; -moz-transform: translateY(0); }   
-  100% { opacity: 0; -moz-transform: translateY(-100%); }
+    0% { opacity: 1; -moz-transform: translate(-50%, 0); }   
+  100% { opacity: 0; -moz-transform: translate(-50%, -100%); }
 }
 
 .slideDown {
@@ -138,24 +138,33 @@ header > a:hover {
     border-radius: 1%;
 
     cursor: pointer;
+
+    position: relative;
 }
 
 .projectName {
     font-size: 2rem;
-
-    text-align: center;
-    vertical-align: middle;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .projectDescription {
+    position: absolute;
+    top: 2%;
+    left: 50%;
+    transform: translateX(-50%);
     opacity: 0;
-}
 
-.projectTags {
-    opacity: 0;
+    width: 95%;
 }
 
 .projectLanguages {
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translateX(-50%);
     opacity: 0;
 }
 
