Fixato centering degli elementi

--- a/public/css/cppmain.css
+++ b/public/css/cppmain.css
@@ -37,21 +37,21 @@
     cursor: pointer;
 
     position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .partName {
     font-size: 2rem;
     position: absolute;
     top: 25%;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 .partDescription {
     position: absolute;
     top: 2%;
-    left: 50%;
-    transform: translateX(-50%);
     opacity: 0;
 
     width: 95%;
