--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -1,21 +1,21 @@
 @-webkit-keyframes slide-down {
-    0% { opacity: 0; -webkit-transform: translate(-50%, -100%); }   
-  100% { opacity: 1; -webkit-transform: translate(-50%, 0); }
+    0% { opacity: 0; -webkit-transform: translate(0, -100%); }   
+  100% { opacity: 1; -webkit-transform: translate(0, 0); }
 }
 
 @-moz-keyframes slide-down {
-    0% { opacity: 0; -moz-transform: translate(-50%, -100%); }   
-  100% { opacity: 1; -moz-transform: translate(-50%, 0); }
+    0% { opacity: 0; -moz-transform: translate(0, -100%); }   
+  100% { opacity: 1; -moz-transform: translate(0, 0); }
 }
 
 @-webkit-keyframes slide-up {
-    0% { opacity: 1; -webkit-transform: translate(-50%, 0); }   
-  100% { opacity: 0; -webkit-transform: translate(-50%, -100%); }
+    0% { opacity: 1; -webkit-transform: translate(0, 0); }   
+  100% { opacity: 0; -webkit-transform: translate(0, -100%); }
 }
 
 @-moz-keyframes slide-up {
-    0% { opacity: 1; -moz-transform: translate(-50%, 0); }   
-  100% { opacity: 0; -moz-transform: translate(-50%, -100%); }
+    0% { opacity: 1; -moz-transform: translate(0, 0); }   
+  100% { opacity: 0; -moz-transform: translate(0, -100%); }
 }
 
 @-webkit-keyframes title-slide-down {
