--- a/public/css/header.css
+++ b/public/css/header.css
@@ -30,7 +30,7 @@ header {
     font-size: 3rem;
     margin-top: 2rem;
     text-align: center;
-    pointer-events: none;
+    cursor: pointer;
 }
 
 #logoName {
