--- a/public/css/header.css
+++ b/public/css/header.css
@@ -79,3 +79,21 @@ header > a:hover {
     color: #9bc1bc;
     pointer-events: none;
 }
+
+.mainPage {
+    position: absolute;
+    top: 0;
+    left: 20%;
+
+    width: 78%;
+    height: 100%;
+
+    padding-left: 2%;
+    background-color: #fbfff1;
+}
+
+.mainTitle {
+    text-align: center;
+    font-size: 2rem;
+    color: #3c3744;
+}
