--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -48,6 +48,16 @@
   100% { width: 31%; }
 }
 
+@keyframes container-expand-height {
+    0% { height: 15rem; }
+  100% { height: 45rem; }
+}
+
+@keyframes container-impand-height {
+    0% { height: 45rem; }
+  100% { height: 15rem; }
+}
+
 .slideDown {
     -webkit-animation: slide-down .5s ease-out;
     -moz-animation: slide-down .5s ease-out;
@@ -76,6 +86,14 @@
     animation: container-impand .5s ease-out;
 }
 
+.containerExpandHeight {
+    animation: container-expand-height .5s ease-out;
+}
+
+.containerImpandHeight {
+    animation: container-impand-height .5s ease-out;
+}
+
 .makeAppear {
     animation: make-appear .5s ease-out;
 }
@@ -90,6 +108,14 @@
 
 .impanded {
     width: 31%;
+}
+
+.expandedHeight {
+    height: 45rem;
+}
+
+.impandedHeight {
+    height: 15rem;
 }
 
 .appear {
