--- a/public/css/exercismmain.css
+++ b/public/css/exercismmain.css
@@ -57,6 +57,7 @@
 .exerciseIndex > li > a {
   color: #fbfff1;
   text-decoration: none;
+  font-size: 1.4rem;
 
   transition: color .5s linear;
 }
