Aggiunto scheletro exercism C++ HTML e CSS

--- a/public/css/cppexercism.css
+++ b/public/css/cppexercism.css
@@ -1,4 +1,41 @@
 .exerciseTitle {
   font-size: 2rem;
   color: #3c3744;
+  text-align: center;
+}
+
+.exerciseContainer {
+
+}
+
+.exerciseInfo {
+
+}
+
+.exerciseInfoLabel {
+
+}
+
+.exerciseInfoPar {
+
+}
+
+.exerciseCodeContainer {
+
+}
+
+.exerciseCodeHeader {
+
+}
+
+.exerciseCodeHeaderLabel {
+
+}
+
+.exerciseCodeCpp {
+
+}
+
+.exerciseCodeCppLabel {
+  
 }
