--- a/public/css/cppexercism.css
+++ b/public/css/cppexercism.css
@@ -20,12 +20,12 @@
 .exerciseInfoLabel {
   font-size: 1.5rem;
   border-bottom: 2px solid #9bc1bc;
-  padding-bottom: 1%;
 
 }
 
 .exerciseInfoPar {
   font-size: 1.2rem;
+  line-height: 3rem;
 }
 
 .exerciseCodeContainer {
