--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,10 @@
 body {
   font-family: "Muli", sans-serif;
   background-color: #fbfff1;
+
+  --main-black:#3c3744;
+  --main-white:#fbfff1;
+  --main-blue:#9bc1bc;
 }
 
 header {
