Aggiunti sezione exercism C++, C# e JS

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,6 +25,10 @@
     align-items: center;
 }
 
+a.projectContainer {
+  text-decoration: none;
+}
+
 .projectName {
     font-size: 2rem;
     padding: 0 2%;
