Miglioramento sezione Exercism main page CSS

--- a/public/css/exercismmain.css
+++ b/public/css/exercismmain.css
@@ -39,8 +39,7 @@
 }
 
 .languageContainer:hover {
-  color: var(--main-black);
-  background-color: var(--main-blue);
+  color: var(--main-blue);
 }
 
 .languageName {
