--- a/public/css/exercismmain.css
+++ b/public/css/exercismmain.css
@@ -7,13 +7,13 @@
 
 .mainTitle > a:hover {
   color: var(--main-black);
-
 }
+
 #allLanguagesContainer {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     align-content: flex-start;
 }
 
@@ -21,6 +21,8 @@
     width: 31%;
     height: 15rem;
     margin: 1%;
+
+    text-decoration: none;
 
     background-color: #3c3744;
     text-align: center;
@@ -34,15 +36,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-    transition: color .5s, background-color .5s linear;
-}
-
-.languageContainer:hover {
-  color: var(--main-blue);
 }
 
 .languageName {
     font-size: 2rem;
     padding: 0 2%;
+
+    transition: opacity .5s linear;
+}
+
+.languageDescriptionTitle {
+    position: absolute;
+    text-align: center;
+    font-size: 2rem;
+    bottom: 20%;
+
+    width: 95%;
+
+    transition: opacity .3s linear;
+}
+
+.languageDescription {
+    display: none;
+    position: absolute;
+    text-align: left;
+    top: 2%;
+
+    width: 95%;
+
+    transition: opacity .5s linear;
 }
