--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     align-content: flex-start;
 }
 
