--- a/public/css/cppmain.css
+++ b/public/css/cppmain.css
@@ -19,6 +19,8 @@
     position: relative;
 
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
 }
@@ -30,29 +32,27 @@
 }
 
 .partInfo {
-    display: none;
     flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     align-content: flex-start;
     width: 100%;
+    height: 15rem;
 
-    opacity: 0;
+    display: none;
 }
 
 .partDescription {
-    height: 100%;
-    width: 20%;
-    margin-left: 5%;
     pointer-events: none;
 }
 
 .partIndex {
-    width: 75%;
-    height: 15rem;
+    height: 80%;
 
     display: flex;
     flex-flow: column wrap;
+    align-items: flex-start;
 }
 
 .partIndex > li {
