--- a/public/css/header.css
+++ b/public/css/header.css
@@ -103,3 +103,111 @@ header > a:hover {
     font-size: 2rem;
     color: #3c3744;
 }
+
+@media only screen and (max-device-width: 480px) {
+  body {
+    font-family: "Muli", sans-serif;
+    background-color: #fbfff1;
+
+    --main-black:#3c3744;
+    --main-white:#fbfff1;
+    --main-blue:#9bc1bc;
+  }
+
+  header {
+      position: fixed;
+      left: -20%;
+      top: 0;
+
+      width: 20%;
+      height: 100%;
+
+      text-align: center;
+
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: flex-start;
+      align-items: center;
+
+      background-color: #3c3744;
+
+      color: #fbfff1;
+
+      z-index: 1000;
+  }
+
+  #logo {
+      border: .3rem solid #fbfff1;
+      color: #fbfff1;
+      width: 4rem;
+      border-radius: 50%;
+      font-size: 3rem;
+      margin-top: 2rem;
+      text-align: center;
+      cursor: pointer;
+  }
+
+  #logoName {
+      font-size: 1.5rem;
+      pointer-events: none;
+  }
+
+  header > a {
+      color: #fbfff1;
+      text-decoration: none;
+      transition: color .2s linear;
+  }
+
+  header > a:hover {
+      color: #9bc1bc;
+  }
+
+  #navigator {
+      border-top: .3rem solid #fbfff1;
+      width: 100%;
+      padding-top: 2rem;
+      margin-top: 3rem;
+      list-style-type: none;
+  }
+
+  #navigator > li:first-child {
+      padding-top: 0%;
+  }
+
+  #navigator > li {
+      padding-top: 3%;
+  }
+
+  #navigator > li > a {
+      text-decoration: none;
+      font-size: 1.3rem;
+      color: #fbfff1;
+      transition: color .2s linear;
+  }
+
+  #navigator > li > a:hover {
+      color: #9bc1bc;
+  }
+
+  #navigator > li > .active {
+      color: #9bc1bc;
+      pointer-events: none;
+  }
+
+  .mainPage {
+      position: absolute;
+      top: 0;
+      left: 20%;
+
+      width: 78%;
+      height: 100%;
+
+      padding-left: 2%;
+  }
+
+  .mainTitle {
+      text-align: center;
+      font-size: 2rem;
+      color: #3c3744;
+  }
+}
