--- a/public/css/header.css
+++ b/public/css/header.css
@@ -197,9 +197,9 @@ header > a:hover {
   .mainPage {
       position: absolute;
       top: 0;
-      left: 20%;
+      left: 0;
 
-      width: 78%;
+      width: 100%;
       height: 100%;
 
       padding-left: 2%;
