Bugfixes minori per mobile e PC

--- a/public/css/exercismmain.css
+++ b/public/css/exercismmain.css
@@ -9,7 +9,7 @@
   color: var(--main-black);
 }
 
-#allLanguagesContainer {
+.allLanguagesContainer {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
