--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-#allProjectsContainer {
+.allProjectsContainer {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -73,7 +73,7 @@
     align-items: center;
   }
 
-  #allProjectsContainer {
+  .allProjectsContainer {
       display: flex;
       flex-flow: column nowrap;
       justify-content: flex-start;
