--- a/public/css/index.css
+++ b/public/css/index.css
@@ -72,7 +72,7 @@
 
   .projectContainerMobile {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: flex-start;
   }
@@ -83,8 +83,8 @@
   }
 
   .projectButton {
-    height: 25rem;
-    width: 10%;
+    height: 10rem;
+    width: 90%;
     font-size: 3rem;
     background-color: var(--main-white);
     color: var(--main-black);
