--- a/public/css/header.css
+++ b/public/css/header.css
@@ -216,7 +216,7 @@ header > a:hover {
 
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     background-color: rgba(251, 255, 241, 0.9);
@@ -224,15 +224,17 @@ header > a:hover {
   }
 
   .mainTitle {
+    width: 50%;
+    font-size: 6rem;
     text-align: center;
-    font-size: 3rem;
     color: var(--main-black);
+
   }
 
   .menuButton {
-    font-size: 2rem;
-    padding-left: 10%;
-    padding-right: 10%;
+    width: 50%;
+    font-size: 6rem;
+    text-align: center;
     cursor: pointer;
   }
 }
