--- a/public/css/header.css
+++ b/public/css/header.css
@@ -207,7 +207,7 @@ header > a:hover {
 
 
   .headerMobile {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 30%;
