--- a/public/css/header.css
+++ b/public/css/header.css
@@ -115,11 +115,12 @@ header > a:hover {
   }
 
   header {
+      display: block;
       position: fixed;
       left: -100%;
       top: 0;
 
-      width: 20%;
+      width: 100%;
       height: 100%;
 
       text-align: center;
@@ -133,7 +134,7 @@ header > a:hover {
 
       color: #fbfff1;
 
-      z-index: 1000;
+      z-index: 2000;
   }
 
   #logo {
