--- a/public/css/header.css
+++ b/public/css/header.css
@@ -216,7 +216,8 @@ header > a:hover {
 
 
   .headerMobile {
-    position: fixed;
+    position: -webkit-sticky;
+    position: sticky;
     top: 0;
     left: 0;
     height: 30%;
