Mobile: ora non ci dovrebbero essere problemi nello scroll

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -214,6 +214,10 @@ header > a:hover {
       padding-left: 0;
   }
 
+  .scrollableMobile {
+    padding-top: 60%;
+    overflow-y: scroll;
+  }
 
   .headerMobile {
     position: fixed;
