Mobile: bugfixes minori su scroll

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -214,7 +214,7 @@ header > a:hover {
       padding-left: 0;
   }
 
-  .scrollableMobile {
+  #scrollableMobile {
     padding-top: 60%;
     overflow-y: scroll;
   }
