Mobile: fixata height div index

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -108,7 +108,7 @@ header > a:hover {
   body {
     font-family: "Muli", sans-serif;
     background-color: #fbfff1;
-    height: 100%;
+    height: 68%;
 
     --main-black:#3c3744;
     --main-white:#fbfff1;
@@ -216,8 +216,9 @@ header > a:hover {
   }
 
   #scrollableMobile {
-    padding-top: 60%;
-    height: 100%;
+    position: absolute;
+    top: 32%;
+    height: 68%;
     overflow-y: scroll;
   }
 
