--- a/public/css/header.css
+++ b/public/css/header.css
@@ -259,4 +259,11 @@ header > a:hover {
     text-align: center;
     cursor: pointer;
   }
+
+  .projectButton {
+    font-size: 7rem;
+    color: var(--main-blue);
+    border: none;
+    margin-top: -10%;
+  }
 }
