--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,11 @@
+.mobileShow {
+  display: none;
+}
+
+.mobileHide {
+  display: block;
+}
+
 body {
   font-family: "Muli", sans-serif;
   background-color: #fbfff1;
@@ -105,6 +113,14 @@ header > a:hover {
 }
 
 @media only screen and (max-device-width: 480px) {
+  .mobileShow {
+      display: inline;
+  }
+
+  .mobileHide {
+      display: none;
+  }
+
   body {
     font-family: "Muli", sans-serif;
     background-color: #fbfff1;
