Mobile: aumentato font C++ reference

--- a/public/css/cparts.css
+++ b/public/css/cparts.css
@@ -105,6 +105,14 @@ h3 {
     text-align: center;
   }
 
+  .mainPage p {
+    font-size: 3rem;
+  }
+
+  .mainPage > pre {
+    font-size: 3.2rem;
+  }
+
   .codeCommentsContainer {
     display: none;
   }
