Mobile: C++ part aggiustati i font

--- a/public/css/cparts.css
+++ b/public/css/cparts.css
@@ -113,6 +113,14 @@ h3 {
     font-size: 3.2rem;
   }
 
+  h3 {
+    font-size: 4rem;
+  }
+
+  .codeAndLabel > pre {
+    font-size: 3.2rem;
+  }
+
   .codeCommentsContainer {
     display: none;
   }
