--- a/public/css/exercismmain.css
+++ b/public/css/exercismmain.css
@@ -66,3 +66,9 @@
 
     transition: opacity .5s linear;
 }
+
+@media only screen and (max-device-width: 480px) {
+  .menuArrowDown {
+    font-size: 5rem;
+  }
+}
