Mobile: background logo ora dovrebbe essere correttmente centrato

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -134,7 +134,7 @@ header > a:hover {
     top: 11%;
     left: 50%;
 
-    transform: translate(-50%, 0);
+    transform: translate(-50%, -11%);
   }
 
   body {
