--- a/public/css/cparts.css
+++ b/public/css/cparts.css
@@ -97,6 +97,25 @@ h3 {
   color: var(--main-black);
 }
 
+.list {
+  font-size: 1.2rem;
+  color: var(--main-black);
+}
+
+.list > li {
+  padding: 1rem;
+}
+
+.list > li > a {
+  text-decoration: none;
+  color: var(--main-black);
+  transition: color .5s linear;
+}
+
+.list > li > a:hover {
+  color: var(--main-blue);
+}
+
 @media only screen and (max-device-width: 480px) {
   .mainPage {
     top: 0%;
