Aggiunti paragrafi parte 1 C++ reference e CSS tabelle

--- a/public/css/cparts.css
+++ b/public/css/cparts.css
@@ -128,6 +128,20 @@ h4 {
   color: var(--main-black);
 }
 
+table {
+  width: 80%;
+}
+
+table > th, td {
+  width: 20%;
+  text-align: center;
+  padding: .5rem 0;
+}
+
+tr:nth-of-type(odd) {
+      background-color:var(--main-blue);
+}
+
 @media only screen and (max-device-width: 480px) {
   .mainPage {
     top: 0%;
